<resources>
    <string name="app_name">Simplay</string>
    <string name="artists">Artists</string>
    <string name="play_list">PlayLists</string>
    <string name="songs">Songs</string>
    <string name="example">Example</string>
    <string name="bbbbb">PlayList</string>
    <string name="ccccc">PlayList</string>
    <string name="get_permission_text">Lets get the fucking permission and move along</string>
    <string name="move_along">Move along</string>
    <string name="no_permission_text">Please approve the permissions, Promise to keep you safe</string>
    <string name="re_request">Re-Request Permissions</string>
    <string name="fix_bottom_margins">"5dp"</string>
    <string name="text_example">"Thig5 Iq 10a Tj5ext20 ex25ample30 yo35and40 hy45ra 50len55too60now65per70"</string>
    <string name="time_start">00:00</string>
    <string name="pause">Pause</string>
    <string name="shuffle">Shuffle</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome to Simplay</string>
    <string name="select_song">Please select media to play</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="no_songs">You have no audio\non the device.\nPlease load audio and launch the app"</string>
    <string name="no_audio">No audio on the device</string>

</resources>
