<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="75dp"
        android:paddingBottom="75dp"
        app:layout_constraintBottom_toTopOf="@+id/music_player_layout"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/music_player_layout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_buttons_linear_layout"
        android:gravity="center"
        android:background="@drawable/button_menu"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/song_name_music_player"
            style="@style/autoscroll"
            android:layout_width="220dp"
            android:layout_height="32dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:maxLength="40"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:textAlignment="center"
            android:text="@string/text_example"
            android:paddingTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/restart_or_last_song"
            app:layout_constraintRight_toLeftOf="@+id/skip_next_song"
            app:layout_constraintBottom_toTopOf="@+id/artist_and_album_music_player"
            app:layout_constraintTop_toTopOf="@+id/music_player_layout"
            />
        <TextView
            android:id="@+id/artist_and_album_music_player"
            android:layout_width="235dp"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:text="@string/text_example"
            android:maxLines="2"
            android:maxLength="40"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"

            android:singleLine="true"
            android:paddingTop="2dp"
            app:layout_constraintLeft_toRightOf="@+id/restart_or_last_song"
            app:layout_constraintRight_toLeftOf="@+id/skip_next_song"
            app:layout_constraintBottom_toTopOf="@+id/seekbar"
            app:layout_constraintTop_toBottomOf="@+id/song_name_music_player"
            android:paddingBottom="3dp"
            />
        <TextView
            android:id="@+id/curr_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/time_start"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/music_player_layout"
            />
        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:thumbTint="@color/white"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/white"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toRightOf="@+id/curr_time"
            app:layout_constraintRight_toLeftOf="@+id/total_time"
            app:layout_constraintBottom_toBottomOf="@+id/music_player_layout"
            android:theme="@style/Widget.AppCompat.SeekBar"
            />
        <TextView
            android:id="@+id/total_time"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/time_start"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/music_player_layout"
            />

        <Button
            android:id="@+id/play_pause"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/music_player_layout"/>

        <Button
            android:id="@+id/skip_next_song"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_skip_next"
            android:shadowColor="#FFFFFF"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="0.01"
            android:padding="16dp"
            app:layout_constraintRight_toLeftOf="@id/play_pause"
            app:layout_constraintTop_toTopOf="@+id/music_player_layout"/>

        <Button
            android:id="@+id/restart_or_last_song"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_skip_next"
            android:scaleX="-1"
            android:scaleY="-1"
            app:layout_constraintLeft_toRightOf="@id/menu_button"
            app:layout_constraintTop_toTopOf="@+id/music_player_layout" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/music_player_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu_buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/all_songs"
            style="@style/coolButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_menu"
            android:text="@string/songs"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/play_lists"
            style="@style/coolButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_menu"
            android:text="@string/play_list"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            app:layout_constraintStart_toEndOf="@+id/all_songs" />

        <Button
            android:id="@+id/artist"
            style="@style/coolButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_menu"
            android:text="@string/artists"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/all_songs" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>